# internal/app/router/wallet.go
@@ -3,6 +3,8 @@ package router
 import (
 	"github.com/Bangnus/Bidkan-backend/internal/app/middleware"
 	"github.com/Bangnus/Bidkan-backend/internal/app/usecase/wallet/topup"
+	"github.com/Bangnus/Bidkan-backend/internal/app/usecase/wallet/transfer"
+	"github.com/Bangnus/Bidkan-backend/internal/app/usecase/wallet/verify_receiver"
 	"github.com/Bangnus/Bidkan-backend/internal/app/usecase/wallet/webhook"
 
 	"github.com/gofiber/fiber/v2"
@@ -12,16 +14,19 @@ func SetupWalletRoutes(
 	app *fiber.App,
 	topupHandler topup.Handler,
 	webhookHandler webhook.Handler,
+	transferHandler transfer.Handler,
+	verifyHandler verify_receiver.Handler,
 ) {
 	api := app.Group("/api")
 	v1 := api.Group("/v1")
 
 	// Protected Routes
-	walletGroup := v1.Group("/wallet")
+	walletGroup := v1.Group("/wallet", middleware.AuthMiddleware())
 	
-	// API สำหรับขอ QR Code (ต้อง Login)
-	walletGroup.Post("/topup", middleware.AuthMiddleware(), topupHandler.Handle)
+	walletGroup.Post("/topup", topupHandler.Handle)
+	walletGroup.Post("/transfer", transferHandler.Handle)
+	walletGroup.Get("/verify-receiver", verifyHandler.Handle)
 
-	// Public Webhook (PaySolutions ยิงมา ดังนั้นไม่ต้องมี Auth ของแอป แต่เดี๋ยวต้องมีวิธีเช็ค Header/IP จากฝั่ง Payment Gateway)
-	walletGroup.Post("/webhook/paysolutions", webhookHandler.Handle)
+	// Public Webhook (แยกออกมาเพราะไม่ต้องใช้ Auth)
+	v1.Post("/wallet/webhook/paysolutions", webhookHandler.Handle)
 }
